# obs

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  OBS Agent.spec  OBS Code.spec  README.md  WORKFLOW_VISUALIZATION.md  api_interface.py  chat_demo.py  chat_interface.py  debug_bash.py  debug_routes.py  deploy.bat  deploy.sh  docker-compose.dev.yml  docker-compose.yml  docker_setup.bat  pyproject.toml  quick_start.py  test.json  test_api_final.json  test_api_import.py  test_docker_api.py  test_execute.py  test_file.json  test_local_api.py  test_request.json  test_simple.py  test_workflow_integration.py  test_wsl_access.sh
.claude/skills/: skill_manager.py
.github/workflows/: ci.yml  test.yml
config/: config.py
frontend/: app.js  index.html  styles.css  test_workflow_data.json  workflow-demo.html
omni-agent/: .env.example  Dockerfile  README.md  pyproject.toml
scripts/: build_macos_app.sh  build_windows_app.cmd  build_windows_app.ps1  generate_desktop_icons.py  run_macos_desktop.sh  run_windows_desktop.cmd  run_windows_desktop.ps1  start_desktop.py  test_claude_skills.py  test_skill_loader.py
tests/: conftest.py  final_test.py  simple_test.py  test_anthropic_skills.py  test_api.py  test_api_architecture.py  test_bash.json  test_claude_skills.py  test_complete_system.py  test_desktop_app.py  test_quick.py  test_request.py  test_request_lifecycle.py  test_session_store.py  test_skill_loader.py  test_skills.py  test_skills_compat.py  test_streaming_agent_fast_paths.py  test_streaming_agent_obs_tags.py  test_system_simple.py
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  (+1 more)
workspace/: test_anthropic.txt
(+91 files in other folders)
